fix(sass): wrap color declaration in `& {}`
Sass's behavior for declarations that appear after nested rules will be changing to match the behavior specified by CSS in an upcoming version

--- a/_sass/highlight.sass
+++ b/_sass/highlight.sass
@@ -18,7 +18,8 @@ $color_13: #8b949e
 			padding: 5px
 		pre
 			margin: 0
-	color: $color_1
+	&
+		color: $color_1
 	.w
 		color: $color_1
 	.k
